--- a/styles/Home.module.styl
+++ b/styles/Home.module.styl
@@ -6,29 +6,37 @@
 
 .main {
   width 100%;
-  min-height: 100vh;
+  //min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width 1280px;
+  max-width 1080px;
 }
+.main_title
+  font-size 50px
+  color white
+  font-weight 600
+  max-width 1080px;
+  text-transform capitalize;
 
-.footer {
+
+.header {
   display: flex;
   width 100%;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
   background var(--primary)
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
+@media only screen and (max-width: 1080px)
+  .main, .main_title
+    max-width: 545px;
+
+
+@media only screen and (max-width: 540px)
+  .main, .main_title
+    max-width: 270px;
+
